# EastlStdCompilationBenchmark

./: .gitignore  CMakeLists.txt  README.md  benchmark.py  eastl_new.cpp  multi_benchmark.py  requirements.txt
benchmark/: compilation_benchmark_test.cpp  test_types.inc  test_types_randomized.inc
benchresults/Mac_M4Max/: clang_analysis_eastl_compilation_benchmark_test_Debug.txt  clang_analysis_eastl_compilation_benchmark_test_Release.txt  clang_analysis_stl_compilation_benchmark_test_Debug.txt  clang_analysis_stl_compilation_benchmark_test_Release.txt  compilation_time_comparison_100_types_debug.txt  compilation_time_comparison_100_types_release.txt  num_types_comparison_debug.txt  num_types_comparison_release.txt
